--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,21 @@ footer .footer-content .copyright {
   padding: 20px 0;
   text-align: center;
 }
+
+/* //STRETCH// //HOVER GROW!!!// */
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  transition-duration: 0.3s;
+  transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+  transform: scale(1.1);
+}'
